--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,8 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
 }
+apply plugin: 'application'
+mainClassName = 'BowlingGame'
